--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,8 +11,12 @@ body {
 }
 
 a {
-  color: inherit;
+  color: #0a5da6;
   text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline;
 }
 
 * {
